Typing error corrected

--- a/HTML-personal site/index.html
+++ b/HTML-personal site/index.html
@@ -60,7 +60,7 @@
 
                     <td>Mimo</td>
 
-                    <td>Web Development Basics/td>
+                    <td>Web Development Basics</td>
 
                 </tr>
 
