image source typo fixed

--- a/TinCat - Bootstrap/index.html
+++ b/TinCat - Bootstrap/index.html
@@ -227,7 +227,7 @@
                         
                         </h2>
 
-                        <img class = "customer-image" src="munchkin.jpg" alt="Customer Image">
+                        <img class = "customer-image" src="Munchkin.jpg" alt="Customer Image">
 
                         <h5>Joseph , Greenwich</h5>
   
